--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "ali-oss": "^6.20.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "0.3.21-dev.e7649d2"
   },
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
